feat: paginate daily weather records